Blink caret only if selection has focus.

Use Selection().SelectionHasFocus() in FrameCaret::ShouldBlinkCaret();

BUG=713051

Review-Url: https://codereview.chromium.org/2887303002
Cr-Commit-Position: refs/heads/master@{#473153}

Former-commit-id: f56b768202fbf0ea253e350a43259781e453c48d